etc/iptables-rules
# Rules written with help from:
#   https://javapipe.com/blog/iptables-ddos-protection/
#   https://opensource.com/article/18/2/how-configure-apache-web-server
#
*filter
:INPUT ACCEPT [3:479]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [22:1525]
# Always accept related and established connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# gitserver-access service requests
-A INPUT -p tcp -m tcp --dport 57348 -m limit --limit 6/m --limit-burst 2 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 57348 -j LOG
-A INPUT -p tcp -m tcp --dport 57348 -j DROP
# Basic DDOS protections
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m connlimit --connlimit-above 111 -j REJECT --reject-with tcp-reset
-A INPUT -p tcp --tcp-flags RST RST -m limit --limit 2/s --limit-burst 2 -j ACCEPT
# Allow local SQL and SMTP traffic
-A INPUT -p tcp -i lo -s 127.0.0.1 -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -i lo -s 10.0.2.20 -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -i lo -s 127.0.0.1 -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -i lo -s 10.0.2.20 -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -i lo -s 127.0.0.1 -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -i lo -s 10.0.2.20 -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -i lo -s 127.0.0.1 -m tcp --dport 465 -j ACCEPT
-A INPUT -p tcp -i lo -s 10.0.2.20 -m tcp --dport 465 -j ACCEPT
# Local web dev testing traffic
# -A INPUT -p tcp -i lo -s 127.0.0.1 -m tcp --dport 63465 -j ACCEPT
# -A INPUT -p tcp -i lo -s 10.0.2.20 -m tcp --dport 63465 -j ACCEPT
# The following section is generated by the gitserver-access daemon, which whitelists specific IPs for certain services
# BEGIN GITSERVER_ACCESS_AUTOGENERATED
# END GITSERVER_ACCESS_AUTOGENERATED
# all other incoming requests are rejected
-A INPUT -j DROP
COMMIT
# The mangle table helps protect against DDOS attacks
*mangle
:PREROUTING ACCEPT [9:744]
:INPUT ACCEPT [9:744]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:373]
:POSTROUTING ACCEPT [6:373]
-A PREROUTING -p tcp ! --syn -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,FIN FIN -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,PSH PSH -j DROP
-A PREROUTING -p tcp --tcp-flags ALL ALL -j DROP
-A PREROUTING -p tcp --tcp-flags ALL NONE -j DROP
-A PREROUTING -p tcp --tcp-flags ALL FIN,PSH,URG -j DROP
-A PREROUTING -p tcp --tcp-flags ALL SYN,FIN,PSH,URG -j DROP
-A PREROUTING -p tcp --tcp-flags ALL SYN,RST,ACK,FIN,URG -j DROP
-A PREROUTING -p icmp -j DROP
-A PREROUTING -f -j DROP
COMMIT
